WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56257
WebCore fails to build with Clang on ARM
https://bugs.webkit.org/show_bug.cgi?id=56257
Summary
WebCore fails to build with Clang on ARM
Cameron Zwarich (cpst)
Reported
2011-03-12 17:51:36 PST
/Volumes/Data/WebKit/Source/WebCore/bindings/js/SerializedScriptValue.cpp:460:19: error: shift count >= width of type value >>= 8; ^ ~ /Volumes/Data/WebKit/Source/WebCore/bindings/js/SerializedScriptValue.cpp:221:13: note: in instantiation of function template specialization 'WebCore::CloneSerializer::writeLittleEndian<unsigned char>' requested here writeLittleEndian<uint8_t>(out, EmptyStringTag); ^ 1 error generated. We need to add an explicit specialization, since this is actually used in a lot of places. But you can't add an explicit specialization at class scope, so writeLittleEndian needs to be made a non-member function.
Attachments
Proposed patch
(3.64 KB, patch)
2011-03-12 17:53 PST
,
Cameron Zwarich (cpst)
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2011-03-12 17:53:57 PST
Created
attachment 85603
[details]
Proposed patch
Cameron Zwarich (cpst)
Comment 2
2011-03-12 19:19:15 PST
Fixed in
r80949
.
WebKit Review Bot
Comment 3
2011-03-12 19:29:01 PST
http://trac.webkit.org/changeset/80949
might have broken Qt Linux Release minimal, Qt Linux ARMv7 Release, Qt Windows 32-bit Release, Qt Windows 32-bit Debug, and EFL Linux Release (Build)
Cameron Zwarich (cpst)
Comment 4
2011-03-12 19:33:01 PST
Ah, the specialization should not have a static.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug