Reviewed by Oliver Hunt.

WebCore fails to build with Clang on ARM
https://bugs.webkit.org/show_bug.cgi?id=56257

Add an explicit instantiation of writeLittleEndian for uint8_t and move it to
namespace scope, since explicit specializations are not allowed at class scope.

* bindings/js/SerializedScriptValue.cpp:
(WebCore::writeLittleEndian):


Canonical link: https://commits.webkit.org/70834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80949 268f45cc-cd09-0410-ab3c-d52691b4dbfc